add liqpay ready solution

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,21 @@ TEST_DB_PORT=5432
 TEST_DB_USER=test_shop_bot_user
 TEST_DB_PASSWORD=
 TEST_DB_NAME=test_shop_bot
+
+
+# ============ LIQPAY CONFIGURATION ============
+# Get credentials from https://www.liqpay.ua/
+# After merchant account setup
+LIQPAY_PUBLIC_KEY=
+LIQPAY_PRIVATE_KEY=
+LIQPAY_CURRENCY=UAH
+LIQPAY_API_URL=https://www.liqpay.ua/api/
+LIQPAY_CALLBACK_URL=https://your-domain.com/webhook/liqpay
+
+# ============ TELEGRAM PAYMENTS CONFIGURATION ============
+TELEGRAM_PAYMENTS_ENABLED=false
+TELEGRAM_PAYMENT_PROVIDER=stripe
+
+# ============ PAYMENT PREFERENCES ============
+PRIMARY_PAYMENT_METHOD=liqpay
+SHOW_PAYMENT_METHOD_CHOICE=true
